# ComeV

./: .eslintrc.json  .gitignore  .prettierrc  README.md  config-overrides.js  package-lock.json  package.json  tsconfig.json  vite.config.ts
docs/: update.json
public/: twitch_redirect.html
src/: App.tsx  index.tsx
src-come-view/: .gitignore  package.json
src-come-view/src/: come_view.html  index.html  index.ts  style.scss  ttvUtils.ts  ytUtils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/assets/: come_view.html
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/cmd/: broadcast.rs  menu.rs  mod.rs  server.rs
src-tauri/wix-locale/: WixUI_ja-jp.wxl
src/components/: BlockedWordsSetting.tsx  ChatItem.tsx  ChatView.tsx  ComeViewSetting.tsx  DummySender.tsx  DummySender2.tsx  LiveControl.tsx  LiveInfoView.tsx  LiveView.tsx  SettingsView.tsx
src/components/titlebar/: Titlebar.tsx
src/context/: chatItem.tsx  config.tsx  liveChat.tsx
src/context/config/: config.tsx  index.tsx
src/features/ChatItem/: useChatItem.ts
src/features/LiveChat/: LiveChatContext.tsx  index.ts  useLiveChat.tsx
src/features/LiveChat/Twitch/: TwitchChat.ts
src/features/LiveChat/Twitch/parser/: chatItem.ts  url.ts
src/features/LiveChat/YouTube/: YouTubeChat.ts
src/features/LiveChat/YouTube/parser/: author.ts  chatItem.ts  message.ts  url.ts
src/hooks/: useLiveChat.tsx  useSettings.tsx
src/services/: liveChatService.ts  liveChatTwitch.ts  liveChatYouTube.ts
src/styles/: main.scss
src/utils/: bouyomi.ts  sendChatApi.ts  tauriInvoke.ts  twitch.ts  update.ts  uuid.ts
