[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["Reona Oshima(totoraj)"]
license = "MIT"
repository = "https://github.com/totoraj930/ComeV"
default-run = "app"
edition = "2021"
rust-version = "1.61.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2.0", features = [] }

[dependencies]
tauri = { version = "1.2.0", features = ["api-all", "updater"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
webbrowser = "0.7.1"
actix-web = "4"
actix-files = "0.6.0"
futures-util = "0.3.21"
parking_lot = "0.12.0"
tokio = { version = "1.16", features = ["sync"] }
tokio-stream = { version = "0.1.8", features = ["time"] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
